[package]
name = "deno-webview"
version = "0.1.9"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.30.0"
wry = "0.45.0"
schemars = "0.8.21"

[features]
transparent = ["wry/transparent"]
devtools = ["wry/devtools"]
