[package]
name = "webview"
version = "0.3.0"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.33.0"
wry = "0.51.0"
schemars = "0.8.21"
parking_lot = "0.12"
actson = "2.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
transparent = ["wry/transparent"]
devtools = ["wry/devtools"]
