[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "justbe-webview"
version = "0.0.4"
description = "A simple webview client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "msgspec>=0.19.0",
    "httpx>=0.27.2",
    "pyee>=12.0.0",
    "types-aiofiles>=24.1.0.20240626",
    "python-ulid>=3.0.0",
]
[dependency-groups]
dev = ["ruff>=0.6.9"]
